--- a/frontend/frontvue/public/index.html
+++ b/frontend/frontvue/public/index.html
@@ -32,6 +32,7 @@
 
     <!-- Bootstrap core JavaScript-->
     <script src="assets"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- Core plugin JavaScript-->
